WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
35354
SVG's tspan is no member of SVGRenderBase, this can cause crashes on filters
https://bugs.webkit.org/show_bug.cgi?id=35354
Summary
SVG's tspan is no member of SVGRenderBase, this can cause crashes on filters
Dirk Schulze
Reported
2010-02-24 12:43:38 PST
SVG's tspan is no member of SVGRenderBase, this can cause crashes on filters. Another problem is, that childs of text elements don't have a boundingBox or repaintRect. So we can't use clipping masking and some other resources on tspan's.
Attachments
get bounding box for tspan
(25.54 KB, patch)
2010-02-24 13:14 PST
,
Dirk Schulze
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Dirk Schulze
Comment 1
2010-02-24 13:14:47 PST
Created
attachment 49425
[details]
get bounding box for tspan get bounding boxes for tspan and inline texts. We take the bounding boxes of the text root. We also need to take the repaint rect of text root to get the right results in filters. Mainly because of chapter 10.4 in the SVG spec.
Nikolas Zimmermann
Comment 2
2010-02-25 13:36:29 PST
Comment on
attachment 49425
[details]
get bounding box for tspan Great, r=me.
Dirk Schulze
Comment 3
2010-02-25 15:04:35 PST
Comment on
attachment 49425
[details]
get bounding box for tspan Clearing flags on attachment: 49425 Committed
r55260
: <
http://trac.webkit.org/changeset/55260
>
Dirk Schulze
Comment 4
2010-02-25 15:04:44 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug